<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    tools:context=".presentation.view.MainActivity">

    <ImageView
        android:id="@+id/iv_pokeball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/image_of_a_pokeball"
        android:src="@drawable/pokeball"
        app:layout_constraintBottom_toBottomOf="@id/tv_pokedex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_pokedex" />

    <TextView
        android:id="@+id/tv_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/pokedex"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_pokeball"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/search_view"
        style="@style/SearchViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search"
        android:searchIcon="@drawable/baseline_search_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pokedex" />

    <com.google.android.material.card.MaterialCardView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view">

        <androidx.fragment.app.FragmentContainerView
            android:layout_gravity="center"
            android:id="@+id/fragment_container_view"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation_graph" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>